test/error/scan/WordLenTooBig.mod
MODULE WordLenTooBig;

VAR AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA: INTEGER;

END WordLenTooBig.
